@@ -1,6 +1,7 @@
 # Lập trình hướng đối tượng - OOP
 
-# Group 17
+
+# Group 17 - On Class
 ## Member
 1. Nguyen Van Nhat
    - ID: 23010887
@@ -48,6 +49,22 @@ public class App {
 ```
 
 # Final Project: Hotel Management System
+Content:
+  Request:
+- JavaFX window interface.
+- Has room management function.
+
+   + Add, edit, delete rooms.
+
+  + List whether rooms are available or not. - Has room booking and check-out functions.
+
+  + When processing this function, additional customer booking information is required. - Data is stored in binary files
+
+  + Need to create classes related to "room" to read and write to files.
+- When working with data in memory, data needs to be stored in the form of optional Collections such as ArrayList, LinkedList, Map, ....
+- Students can add functions to the program for richer applications by learning about hotel management problems (optional).
+
+# Final Project: Hotel Management System
 Nội dung:
   Yêu cầu:
 - Giao diện cửa sổ JavaFX.
@@ -62,12 +79,138 @@ Nội dung:
 + Cần tạo các lớp liên quan đến “phòng” để đọc, ghi xuống file.
 - Khi làm việc với dữ liệu trong bộ nhớ, dữ liệu cần được lưu trữ dưới dạng các Collection tùy chọn như ArrayList, LinkedList, Map, ....
 - Sinh viên có thể thêm các chức năng vào chương trình để ứng dụng phong phú hơn bằng cách tìm hiểu về bài toán quản lý khách sạn (tùy chọn).
+  
+
+# Course Project
+<div align="center">
+
+  # 🛒 Hotel Booking System 🏨
+
+  *Seamless shopping and security experience* 🔒
+
+  ![JavaFX](https://img.shields.io/badge/JavaFX-black?style=for-the-badge&logo=java&logoColor=007396)
+  ![CSS](https://img.shields.io/badge/CSS-black?style=for-the-badge&logo=css3&logoColor=1572B6)
+  ![Bootstrap](https://img.shields.io/badge/Bootstrap-black?style=for-the-badge&logo=bootstrap&logoColor=7952B3)
+
+  ![MySQL](https://img.shields.io/badge/MySQL-white?style=for-the-badge&logo=mysql&logoColor=4479A1)
+  ![Hosting](https://img.shields.io/badge/Hosting-white?style=for-the-badge&logo=googlecloud&logoColor=4285F4)
+  
+
+  <img width="595px" src="https://res.cloudinary.com/dsmh0vnjh/image/upload/v1732243644/OOP-HotelMS-App/jkpimmhpyapmmhou48df.png">
+
+  [![Download](https://img.shields.io/badge/🔗_Download_App-white?style=flat)](https://drive.google.com/drive/folders/1mmPEKQvuDVeqmle39Xz6lNWhK89lLOJ7)
+
+</div>
+
+## 📘 Table of Contents
+1. [Introduction](#introduction) 🧟
+2. [Technologies](#technologies) 💻
+3. [Features](#features) 🔎
+4. [DevOps](#devops) ✈️
+5. [Contact](#contact) 🌐
+
+## 🧟 <a name="introduction">Introduction</a>
+### Hotel Booking And Management Software Project Overview
+
+**Overview**  
+The hotel management software project is designed to provide a comprehensive solution for managing daily hotel operations. The system optimizes processes such as room bookings, customer information management, resource allocation, and billing. Its primary objectives are to enhance operational efficiency, improve customer experience, and ensure data security.
+
+**Project Goals**
+- **User-Friendly Online Booking:** Enable quick and convenient online reservations, including special events and group bookings.
+- **Customer Information Management:** Store and manage customer data securely, track booking history, and offer personalized promotions.
+- **Room and Resource Management:** Monitor room availability, manage room types, and ensure readiness of amenities.
+- **Integrated Payment and Billing:** Support multiple secure payment methods, generate invoices, and manage auxiliary services and costs.
+- **Security and Access Control:** Implement strong security measures to protect customer data and control access for authorized staff.
+- **Third-Party Integration:** Integrate with external systems like payment gateways and airline booking platforms for seamless customer experiences.
+
+**Project Benefits**
+- **Operational Efficiency:** Streamline daily tasks, reduce errors, and enhance productivity.
+- **Improved Customer Experience:** Offer convenient booking and payment options, clear information, and quality services.
+- **Better Information and Resource Management:** Ensure efficient management of customer data, rooms, and hotel resources.
+- **Enhanced Security:** Protect sensitive customer and hotel data with robust security measures.
 
 
-# Result
-   [Project](https://drive.google.com/drive/folders/1mmPEKQvuDVeqmle39Xz6lNWhK89lLOJ7?usp=drive_link)
-   
+## 💻 <a name="technologies">Technologies</a>
+
+<div align="center">
+
+  ![Technologies](https://skillicons.dev/icons?i=java,mysql,css,cloudflare)
+
+</div>
+
+
+- **JavaFX:** A library for building the application's graphical user interface (GUI), providing rich features for a seamless and interactive user experience.
+
+- **CSS:** Utilized for styling the JavaFX application, ensuring a visually appealing and responsive interface design that enhances user experience.
+
+- **MySQL:** The database system for storing and managing application data, such as customer information, room details, booking records, and payment transactions.
+
+- **Hosting:** A platform or environment where the application will be deployed and accessed, ensuring availability and scalability for end-users.
 
 
 
+## 🔎 <a name="features">Features</a>
 
+- **🔷 Register:** Customers can create an account by providing personal details, including a unique username and password.
+- **🔷 Login:** Customers log in using their email and password to access their accounts.
+- **🔷 Forgot Password:** Customers can reset their password through a secure process.
+- **🔷 Admin Permissions:** Admins or authorized staff can manage hotel categories, room details, and other resources.
+- **🔷 Add Room:** Managers can add new rooms, update details, and store images on Cloudinary for easy access.
+- **🔷 Booking Details:** Customers can view room details, select rooms, and proceed to make reservations.
+- **🔷 Room Filtering:** Displays all available rooms with filtering options based on categories or preferences.
+- **🔷 Cart:** Lists all selected rooms for booking with the total cost displayed.
+- **🔷 Checkout:** Customers provide booking details, confirm reservations, and pay securely via Stripe.
+- **🔷 Manage Rooms:** Admins can handle room availability, updates, and booking records for efficient operation. ...
+
+**NOTE:** 
+- You can log in as an admin using the email `admin` and password `1`.
+
+  ### Video Demo
+
+    [![Watch the demo](https://img.youtube.com/vi/31egOFPHBrk/0.jpg)](https://www.youtube.com/watch?v=31egOFPHBrk)
+  ### Documentation : [HotelMS](https://drive.google.com/drive/folders/1mmPEKQvuDVeqmle39Xz6lNWhK89lLOJ7?usp=drive_link)
+
+
+## ✈️ <a name="devops">DevOps</a>
+
+### Prerequisites
+- [Git](https://git-scm.com/)
+- [Java](https://www.oracle.com/java/)
+- [MySQL](https://www.mysql.com/)
+
+### 🖥️ Development 
+
+#### 1. Clone the repository:
+```
+https://github.com/nhatcoi/OOP-HotelMS-App
+```
+
+#### 2. Set Up Environment Variables:
+- Config by config-example.json into config.json file in the directory.
+  ```
+  {
+    "host": "localhost",
+    "username": "change name file to config.json",
+    "password": "your_password",
+    "database_name": ""
+  }
+}
+  ```
+#### 3. Start the development
+- Set up JavaFX SDK in your IDE.
+- Add JVM Options: `--module-path /path/to/javafx-sdk-17.0.0/lib --add-modules javafx.controls,javafx.fxml`
+- Run maven to build the project.
+- Run application export from jar.
+
+  ```
+
+
+### 🌟 I hope it saves you time debugging, as I’ve already gone through the tough parts for you, `XD`. And if you found it useful, a star on this GitHub repository would mean the world to me!
+
+
+
+## 🌐 <a name="contact">Contact</a>
+
+- **Name:** Nhat Nguyen - **Jackie**
+- **LinkedIn:** [Nhat Nguyen](https://www.linkedin.com/in/nhat-nguyen-59b691310/)
+- **Email:** [jackie04.work@outlook.com](mailto:jackie04.work@outlook.com)
